jswt-semantics/src/globals/snapshots/jswt_semantics__globals__functions__test__context_reports_duplicate_function_error.snap
---
source: jswt-semantics/src/globals/functions.rs
expression: resolver
---
GlobalSemanticResolver {
    bindings: BindingsTable {
        bindings: {},
    },
    symbols: ScopedSymbolTable {
        scopes: [
            Span {
                file: "program",
                module: "root",
                start: 0,
                end: 0,
            },
        ],
        table: {
            Span {
                file: "program",
                module: "root",
                start: 0,
                end: 0,
            }: Scope {
                symbols: {
                    "test2": Function(
                        FunctionSignature {
                            params: [],
                            returns: Binding(
                                "Array",
                            ),
                        },
                    ),
                },
                ret: None,
            },
        },
    },
    errors: [
        FunctionAlreadyDefined {
            name: "test2",
            span: Span {
                file: "test_context_reports_duplicate_function_error",
                module: "module/test_context_reports_duplicate_function_error",
                start: 63,
                end: 68,
            },
        },
    ],
}
