jswt-semantics/src/globals/snapshots/jswt_semantics__globals__functions__test__context_resolves_function_bindings.snap
---
source: jswt-semantics/src/globals/functions.rs
expression: resolver
---
GlobalSemanticResolver {
    environment: SemanticEnvironment {
        bindings: SemanticBindingsTable {
            bindings: {},
        },
        symbols: ScopedSymbolTable {
            scopes: [
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                },
            ],
            files: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "test": Function(
                            Function {
                                name: "test",
                                params: [
                                    Parameter {
                                        name: "a",
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                    Parameter {
                                        name: "b",
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                ],
                                ret: Binding(
                                    "void",
                                ),
                            },
                        ),
                        "test2": Function(
                            Function {
                                name: "test2",
                                params: [],
                                ret: Binding(
                                    "Array",
                                ),
                            },
                        ),
                    },
                    ret: None,
                },
            },
        },
        types: TypeMap {
            types: {},
        },
    },
    errors: [],
}
